syntax = "proto3";

package chat;

//Chat service
service Chat {
    //Enter Room
  rpc Join(JoinRequest) returns (stream ChatEvent);
  //Send Message
  rpc SendMessage(SendMessageRequest) returns (SendMessageReply);
}

// JoinRequest
message JoinRequest {
  string room_name = 1;
  string user_name = 2;
}

// ChatEvent
message ChatEvent {
  string        room_name  = 1;
  string        user_name  = 2;
  string        content    = 3;
  string        timestamp  = 4;
  ChatEventType event_type = 5;
}

// SendMessageRequest
message SendMessageRequest {
  string room_name = 1;
  string user_name = 2;
  string content   = 3;
}

// SendMessageReply
message SendMessageReply {
  bool ok = 1;
}

// Event Types
enum ChatEventType {
  MESSAGE = 0;
  JOIN    = 1;
  LEAVE   = 2;
}